# LOLegendsUID

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
LOLegendsUID/: __init__.py  version.py
LOLegendsUID/lol_info/: __init__.py  draw_lol_battle_list.py  draw_lol_info_pic.py
LOLegendsUID/lol_start/: main.py
LOLegendsUID/lol_user/: __init__.py  add_ck.py  search_player.py
LOLegendsUID/utils/: error_reply.py  lol_api.py  lol_config.py
LOLegendsUID/utils/api/: api.py  models.py  remote_const.py  request.py
LOLegendsUID/utils/database/: models.py
LOLegendsUID/utils/resource/: HERO_INFO.py  RESOURCE_PATH.py
